--- a/index.html
+++ b/index.html
@@ -99,5 +99,7 @@ function searchDivs() {
   }
 }
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2736490405806017"
+     crossorigin="anonymous"></script>
 </body>
 </html>
